# miu2d

./: .dockerignore  .env.example  .gitignore  LICENSE  MUSIC_README.md  Makefile  README.md  README_CN.md  biome.json  column1.msf  convert-encoding.sh  convert-music.sh  docker-compose.yml  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tailwind.config.js  tsconfig.base.json  turbo.json  vercel.json  vite.config.ts
.github/: copilot-instructions.md
.github/instructions/: conventions.instructions.md  engine.instructions.md  scripts.instructions.md  server.instructions.md
deploy/: deploy-10.0.4.4.sh  deploy-mirror.sh
docs/: MUSIC_README.md  UI_UPDATE.md  binary-formats.md  character-code-analysis.md  character-hierarchy.md  character-properties.md  editor.md  magic-types.md  method-comparison.md  mmf-format.md  msf-format-v1.md  msf-format.md  npc-player-method-comparison.md  pathfinder.md  python-scripts.md  script-commands.md  ui-adapter-architecture.md
scripts/: build-wasm.sh  check-alpha.py  check-circular-deps.mjs  convert-encoding.py  convert-encoding.sh  convert-ini-to-theme.ts  convert-sound.py  convert-sword2.py  convert-video.sh  export-training-data.py  generate-ai-magic.py  migrate-saves-magic-container.ts  refactor-merge-ui-gui.mjs  refactor-normalize-key.mjs  refactor-singletons.mjs  restructure-engine.mjs  train-lora-magic.py  upload-to-r2.sh
src/: App.tsx  index.css  main.tsx
src/components/: Game.tsx  MapViewer.tsx  index.ts
src/config/: index.ts  resourcePaths.ts
src/constants/: maps.ts
src/engine/: asf.ts  (+8 more)
(+320 files in other folders)
